--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,9 @@
 
 # Connection string consumed by Prisma's Postgres datasource.
 # Format: postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/pos?schema=public"
+DATABASE_URL="postgresql://postgres:dev@localhost:5432/pos_db?schema=public"
+JWT_SECRET="ISI_DISINI"
+JWT_EXPIRES_IN="1d"
 
 # Optional overrides for seeding default accounts.
 # Uncomment and adjust to customize seeded credentials when running `npm run prisma:seed`.
