--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,13 @@ on:
     branches: [main, master]
   pull_request:
 
+env:
+  DATABASE_URL: postgresql://postgres:dev@localhost:5432/pos_db?schema=public
+  JWT_SECRET: test-secret
+  NODE_ENV: test
+
 jobs:
-  test:
+  lint-and-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -15,11 +20,20 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22.x
+          node-version: 20.x
           cache: npm
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Generate Prisma client
+        run: npm run prisma:generate
+
+      - name: Lint
+        run: npx eslint .
+
+      - name: Prettier check
+        run: npx prettier --check .
 
       - name: Run tests with coverage
         run: npm run test:coverage
